Updated rules-view to include points and text about tutorial

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -96,7 +96,8 @@
         android:id="@+id/view_rules"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/bg_play">
 
         <ImageView
             android:id="@+id/txt_rules"
@@ -109,38 +110,50 @@
         <TextView
             style="@style/TextHeaders"
             app:fontFamily="sans-serif-condensed-medium"
-            android:text="@string/good_objects_subheader" />
+            android:text="@string/good_objects_subheader"
+            />
 
         <LinearLayout
             style="@style/LinearRowLayout">
             <ImageView
                 style="@style/ImageRow"
-                android:background="@drawable/obj_good_apple" />
-            <ImageView
-                style="@style/ImageRow"
-                android:background="@drawable/obj_good_banana" />
-            <ImageView
-                style="@style/ImageRow"
-                android:background="@drawable/obj_good_orange" />
-            <ImageView
-                style="@style/ImageRow"
-                android:background="@drawable/obj_good_cherry" />
-            android:background="@drawable/obj_good_banana" />
+                android:background="@drawable/obj_good_strawberry"/>
             <ImageView
                 style="@style/ImageRow"
                 android:background="@drawable/obj_good_pineapple" />
             <ImageView
                 style="@style/ImageRow"
+                android:background="@drawable/obj_good_cherry"/>
+            <ImageView
+                style="@style/ImageRow"
+                android:background="@drawable/obj_good_orange" />
+
+            <TextView
+                style="@style/TextPoints"
+                app:fontFamily="sans-serif-condensed-medium"
+                android:text="= 1, " />
+            <ImageView
+                style="@style/ImageRow"
+                android:background="@drawable/obj_good_banana" />
+            <ImageView
+                style="@style/ImageRow"
                 android:background="@drawable/obj_good_grapes" />
             <ImageView
                 style="@style/ImageRow"
-                android:background="@drawable/obj_good_strawberry" />
+                android:background="@drawable/obj_good_lemon" />
+            <ImageView
+                style="@style/ImageRow"
+                android:background="@drawable/obj_good_apple" />
+            <TextView
+                style="@style/TextPoints"
+                app:fontFamily="sans-serif-condensed-medium"
+                android:text="= 2" />
         </LinearLayout>
 
         <TextView
             style="@style/TextDescription"
             android:gravity="center_horizontal"
-            android:text="@string/good_objects_description" />
+            android:text="@string/good_objects_description"/>
 
         <TextView
             style="@style/TextHeaders"
@@ -153,23 +166,29 @@
                 style="@style/ImageRowSnake"
                 android:background="@drawable/obj_bad_snake" />
             <ImageView
-                style="@style/ImageRow"
-                android:background="@drawable/obj_bad_spider" />
-            <ImageView
                 style="@style/ImageRowSnake"
                 android:background="@drawable/obj_bad_snake" />
             <ImageView
+                style="@style/ImageRowSnake"
+                android:background="@drawable/obj_bad_snake" />
+            <TextView
+                style="@style/TextPoints"
+                app:fontFamily="sans-serif-condensed-medium"
+                android:text="= -3, " />
+            <ImageView
                 style="@style/ImageRow"
                 android:background="@drawable/obj_bad_spider" />
             <ImageView
-                style="@style/ImageRowSnake"
-                android:background="@drawable/obj_bad_snake" />
-            <ImageView
                 style="@style/ImageRow"
                 android:background="@drawable/obj_bad_spider" />
             <ImageView
-                style="@style/ImageRowSnake"
-                android:background="@drawable/obj_bad_snake" />
+                style="@style/ImageRow"
+                android:background="@drawable/obj_bad_spider" />
+            <TextView
+                style="@style/TextPoints"
+                app:fontFamily="sans-serif-condensed-medium"
+                android:text="= -2" />
+
         </LinearLayout>
 
         <TextView
@@ -186,25 +205,35 @@
             style="@style/LinearRowLayout">
             <ImageView
                 style="@style/ImageRow"
-                android:background="@drawable/obj_powerup_beetle" />
+                android:background="@drawable/obj_powerup_ladybug" />
             <ImageView
                 style="@style/ImageRow"
                 android:background="@drawable/obj_powerup_ladybug" />
+            <TextView
+                style="@style/TextPoints"
+                app:fontFamily="sans-serif-condensed-medium"
+                android:text="= 1, " />
             <ImageView
                 style="@style/ImageRow"
                 android:background="@drawable/obj_powerup_starbeetle" />
             <ImageView
                 style="@style/ImageRow"
-                android:background="@drawable/obj_powerup_beetle" />
-            <ImageView
-                style="@style/ImageRow"
-                android:background="@drawable/obj_powerup_ladybug" />
-            <ImageView
-                style="@style/ImageRow"
                 android:background="@drawable/obj_powerup_starbeetle" />
+            <TextView
+                style="@style/TextPoints"
+                app:fontFamily="sans-serif-condensed-medium"
+                android:text="= 2, " />
             <ImageView
                 style="@style/ImageRow"
                 android:background="@drawable/obj_powerup_beetle" />
+            <ImageView
+                style="@style/ImageRow"
+                android:background="@drawable/obj_powerup_beetle" />
+
+            <TextView
+                style="@style/TextPoints"
+                android:text="= 3 "
+                app:fontFamily="sans-serif-condensed-medium" />
         </LinearLayout>
 
         <TextView
@@ -212,6 +241,12 @@
             android:gravity="center_horizontal"
             android:text="@string/powerups_description" />
 
+        <TextView
+            style="@style/TextHeaders"
+            android:text="–Play the singleplayer game to learn how to play–"
+            android:textSize="20dp"
+            android:textStyle="bold|italic"
+            app:fontFamily="sans-serif-condensed-medium" />
     </LinearLayout>
 
     <!-- PLAY GAME VIEW -->
