Add new difficulty, deatchMatch

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -286,6 +286,11 @@
             style="@style/MenuButton"
             android:background="@drawable/button_hard" />
 
+        <Button
+            android:id="@+id/btn_hard2"
+            style="@style/MenuButton"
+            android:background="@drawable/button_hard" />
+
     </LinearLayout>
 
     <!-- PLAY MULTI-PLAYER VIEW (CREATE / JOIN ROOM -->
